refactor: 성능 개선을 위해 실시간 거래 탐지 로직 개선